tests/test_proof/bad/output/structs-overlap.catala_en.Proof
[RESULT] [A.x] This variable never returns an empty error
[ERROR] [A.x] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/structs-overlap.catala_en
   | 
13 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
[RESULT] [A.y] This variable never returns an empty error
[RESULT] [A.y] No two exceptions to ever overlap for this variable
